# Anaagent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-run.bat  docker-run.sh  pyproject.toml  pytest.ini
refer/Claude-Code-x-OpenClaw-Guide-Zh-main/Claude-Code-x-OpenClaw-Guide-Zh-main/: .gitignore  LICENSE  README.md
refer/mcp/awesome-mcp-servers-main/: CONTRIBUTING.md  README-fa-ir.md  README-ja.md  README-ko.md  README-pt_BR.md  README-th.md  README-zh.md  README-zh_TW.md  README.md
refer/mcp/awesome-mcp-servers-main/.github/workflows/: check-glama.yml
refer/skill/skills-main/: Agents.md  context7.json
refer/skill/skills-main(1)/: .gitignore  README.md
refer/skill/skills-main(1)/.claude-plugin/: marketplace.json
refer/skill/skills-main/.github/: copilot-instructions.md
refer/skill/skills-main/.github/agents/: backend.agent.md  frontend.agent.md  infrastructure.agent.md  planner.agent.md  presenter.agent.md  (+1 more)
refer/skill/skills-main/docs-site/: .gitignore  astro.config.mjs  package-lock.json  package.json  playwright.config.ts
refer/skill/skills-main/tests/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
scripts/: claude-wrapper  docker-bashrc
src/anaagent/: __init__.py  agent_manager.py  claude_integration.py  cli.py  commands_manager.py  component_manager.py  config_manager.py  database.py  environment.py  hooks_executor.py  marketplace.py  memory_manager.py  models.py  team_context.py  team_io.py  usage_monitor.py
tests/: test_anaagent.py
(+581 files in other folders)
